<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pill Logger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pill_name_hint">Pill Name</string>
    <string name="pill_size_hint">Pill Size</string>
    <string name="units">g</string>
    <string name="add_button">Add</string>
    <string name="title_pill_detail">Pill Detail</string>
    <string name="title_pill_list">Pills</string>
    <string name="add_consumption_title">Add New Consumption</string>

    <string name="drawer_consumption">Consumption</string>
    <string name="drawer_pills">Pills</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Close</string>

    <string name="pill_units">mg</string>

    <string name="placeholder_pill_text">Paracetamol</string>
    <string name="placeholder_pill_size">500</string>
    <string name="drawer_settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="delete">Delete</string>

</resources>