<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:gravity="fill"
    android:orientation="horizontal"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/field_bottom_margin"
        android:ems="10"
        android:hint="@string/pill_name_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginBottom="@dimen/field_bottom_margin"
        android:ems="10"
        android:hint="@string/pill_size_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/size"
        android:layout_below="@+id/size"
        android:layout_marginTop="14dp"
        android:onClick="addPill"
        android:text="@string/add_button" />
</RelativeLayout>